CREATE TABLE "users" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "username" varchar(50) UNIQUE NOT NULL,
  "email" varchar(255) UNIQUE NOT NULL,
  "password_hash" varchar(255) NOT NULL,
  "role" varchar(20) NOT NULL DEFAULT 'user',
  "created_at" timestamp NOT NULL DEFAULT (now()),
  "updated_at" timestamp NOT NULL DEFAULT (now())
);

CREATE TABLE "teams" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "user_id" integer NOT NULL,
  "name" varchar(100) NOT NULL,
  "notes" text,
  "created_at" timestamp NOT NULL DEFAULT (now()),
  "updated_at" timestamp NOT NULL DEFAULT (now())
);

CREATE TABLE "team_pokemon" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "team_id" integer NOT NULL,
  "pokemon_api_id" integer NOT NULL,
  "slot_number" integer NOT NULL,
  "nickname" varchar(100),
  "ability" varchar(100),
  "item" varchar(100),
  "nature" varchar(50),
  "move_1" varchar(100),
  "move_2" varchar(100),
  "move_3" varchar(100),
  "move_4" varchar(100),
  "hp_ev" integer NOT NULL DEFAULT 0,
  "attack_ev" integer NOT NULL DEFAULT 0,
  "defense_ev" integer NOT NULL DEFAULT 0,
  "special_attack_ev" integer NOT NULL DEFAULT 0,
  "special_defense_ev" integer NOT NULL DEFAULT 0,
  "speed_ev" integer NOT NULL DEFAULT 0,
  "hp_iv" integer NOT NULL DEFAULT 31,
  "attack_iv" integer NOT NULL DEFAULT 31,
  "defense_iv" integer NOT NULL DEFAULT 31,
  "special_attack_iv" integer NOT NULL DEFAULT 31,
  "special_defense_iv" integer NOT NULL DEFAULT 31,
  "speed_iv" integer NOT NULL DEFAULT 31,
  "created_at" timestamp NOT NULL DEFAULT (now()),
  "updated_at" timestamp NOT NULL DEFAULT (now())
);

CREATE INDEX ON "teams" ("user_id");

CREATE INDEX ON "team_pokemon" ("team_id");

CREATE UNIQUE INDEX ON "team_pokemon" ("team_id", "slot_number");

ALTER TABLE "teams" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "team_pokemon" ADD FOREIGN KEY ("team_id") REFERENCES "teams" ("id") ON DELETE CASCADE DEFERRABLE INITIALLY IMMEDIATE;
