// Brymon Database ERD

Table users {
  id integer [pk, increment]
  username varchar(50) [not null, unique]
  email varchar(255) [not null, unique]
  password_hash varchar(255) [not null]
  role varchar(20) [not null, default: 'user']
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

Table teams {
  id integer [pk, increment]
  user_id integer [not null]
  name varchar(100) [not null]
  notes text
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]

  Indexes {
    user_id
  }
}

Table team_pokemon {
  id integer [pk, increment]
  team_id integer [not null]
  pokemon_api_id integer [not null]
  slot_number integer [not null]

  nickname varchar(100)
  ability varchar(100)
  item varchar(100)
  nature varchar(50)

  move_1 varchar(100)
  move_2 varchar(100)
  move_3 varchar(100)
  move_4 varchar(100)

  hp_ev integer [not null, default: 0]
  attack_ev integer [not null, default: 0]
  defense_ev integer [not null, default: 0]
  special_attack_ev integer [not null, default: 0]
  special_defense_ev integer [not null, default: 0]
  speed_ev integer [not null, default: 0]

  hp_iv integer [not null, default: 31]
  attack_iv integer [not null, default: 31]
  defense_iv integer [not null, default: 31]
  special_attack_iv integer [not null, default: 31]
  special_defense_iv integer [not null, default: 31]
  speed_iv integer [not null, default: 31]

  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]

  Indexes {
    team_id
    (team_id, slot_number) [unique]
  }
}

Ref: teams.user_id > users.id [delete: cascade]
Ref: team_pokemon.team_id > teams.id [delete: cascade]